# depc-bridge

./: .gitignore  Cargo.toml  README.md
contract/: erc20.sol
contract/output/: ERC20Token.abi
samples/: ex_7days.json  ex_month.json  tx_0df34680b4a8b883b00148eaa81e17c44d7769484270dd8bf0d2720ac0077605.json  tx_751cbbfefdd1e78950f1e69c79ec96babc3bb44737c587fdd49f86afa6c6234b.json  tx_838b6158772219d547df240b005c3572c9f15fba0f29be3a92b0e4326c2b33e0.json
src/: args.rs  main.rs
src/bridge/: bridge.rs  depc_script.rs  deposit.rs  mod.rs
src/chain/: auth.rs  client.rs  config.rs  error.rs  mod.rs  request.rs  rpc_json.rs  rpc_resp.rs  types.rs
src/cmds/: deploy.rs  mod.rs  run.rs
src/db/: conn.rs  mod.rs
src/depc/: client.rs  error.rs  mod.rs  script.rs  types.rs
src/deploy/: deployer.rs  mod.rs
src/eth/: address.rs  client.rs  mod.rs  transaction.rs
src/rest/: service.rs
src/rpc/: client.rs  config.rs  mod.rs  request.rs  response.rs
src/solana/: airdrop_maker.rs  analyzer.rs  builder.rs  chain_querier.rs  client.rs  client_builder.rs  deploy.rs  error.rs  mod.rs  query.rs  spl_token.rs  token.rs  token_query.rs  transaction_info.rs  transaction_parser.rs
src/sync/: mod.rs  syncing.rs
