[package]
name = "depc-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
rbase64 = "2.0.3"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
shellexpand = "3.1.0"
tokio = { version = "1.40.0", features = ["full"] }
ureq = "2.10.1"
